--- a/style.css
+++ b/style.css
@@ -1,87 +1,91 @@
-body{
-    height: 100vh;
-    font-family: "Poppins", sans-serif !important;
-    font-weight: 100;
-    font-style: normal;
+body {
+  height: 100vh;
+  font-family: "Poppins", sans-serif !important;
+  font-weight: 100;
+  font-style: normal;
 }
 
-.main-div{
-    background-color: white;
-    width: 100%;
+.main-div {
+  background-color: white;
+  width: 100%;
 }
 
-.upper-div{
-    height: 19vh;
-    width: 100%;
-    border-radius: 12px;
+.upper-div {
+  height: 19vh;
+  width: 100%;
+  border-radius: 12px;
 }
 
-.upper-child{
-     display: flex;
-     justify-content: space-between;
-     border-radius: 12px;
-     cursor: pointer;
+.upper-child {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 12px;
+  cursor: pointer;
+  transition: box-shadow 0.2s ease;
 }
 
-.upper-child-left p:first-child{
-    font-size: clamp(13px, 5vw, 20px);
-    font-weight: 400;
-    margin: 5px 0 0 0;
+.upper-child:hover {
+  box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.25);
 }
 
-.upper-child-left p{
-    font-weight: 500;
-    font-size: clamp(14px, 5vw, 35px);
-    margin: 0;
+.upper-child-left p:first-child {
+  font-size: clamp(13px, 5vw, 20px);
+  font-weight: 400;
+  margin: 5px 0 0 0;
 }
 
-.upper-box-icons{
-    width: 8vw;
-    height: 8vw;
-    max-width: 35px;  
+.upper-child-left p {
+  font-weight: 500;
+  font-size: clamp(14px, 5vw, 35px);
+  margin: 0;
 }
 
+.upper-box-icons {
+  width: 8vw;
+  height: 8vw;
+  max-width: 35px;
+}
 
 /* //// Scroll Bar //// */
 
 .for-Task-scroll {
-  height: 250px !important;
-  overflow-y: auto !important;    
-  overflow-x: hidden !important;  
+  height: 44vh !important;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
 }
 
 .for-Task-scroll::-webkit-scrollbar {
-  width: clamp(0px, 2vw, 8px) !important;     
-  height: 12px !important;       
+  width: clamp(0px, 2vw, 8px) !important;
+  height: 12px !important;
 }
 
 .for-Task-scroll::-webkit-scrollbar-track {
-  background: #d8d8d8 !important;     
+  background: #d8d8d8 !important;
   border-radius: 10px;
 }
 
 .for-Task-scroll::-webkit-scrollbar-thumb {
-  background: #7c7b7b !important;         
+  background: #7c7b7b !important;
   border-radius: 10px;
-  height: 5px !important; 
+  height: 5px !important;
 }
 
 .for-Task-scroll::-webkit-scrollbar-thumb:hover {
-  background: #8e8d8d !important; 
-} 
+  background: #8e8d8d !important;
+}
 
 /* //////////////////////////////////// */
 
-#todo{
+#todo {
   outline: none;
   border: 0;
   width: 100%;
   height: 50px;
   border-radius: 7px;
-  padding: 0px 20px ;
+  padding: 0px 20px;
 }
 
-.add{
+.add {
   border: 0;
   height: 50px;
   width: 100px;
@@ -89,11 +93,11 @@ body{
   background-color: white;
 }
 
-.input-div{
+.input-div {
   width: 100%;
 }
 
-.delete{
+.delete {
   border: 0;
   height: 50px;
   border-radius: 7px;
@@ -101,17 +105,15 @@ body{
   font-weight: 500;
 }
 
-
 /* /////////////////////////////////////////// */
 
-.task-bar-div{
-    border-radius: 12px;
+.task-bar-div {
+  border-radius: 12px;
 }
 
-.menu{
-    background-color: rgba(187, 187, 230, 0.2);
+.menu {
+  background-color: rgba(187, 187, 230, 0.2);
 }
-
 
 /* //////////////////////////// */
 
@@ -192,81 +194,45 @@ input[type="checkbox"]:focus {
   stroke-dashoffset: 0;
 }
 
-.tick-svg{
+.tick-svg {
   width: clamp(10px, 1vw, 15px);
   height: clamp(9px, 1vw, 14px);
 }
-/* @-moz-keyframes splash {
-  0% {
-    transform: scale(1.1);
-  }
-  40% {
-    transform: scale(1);
-    background: #1bf559;
-    box-shadow: 0 -18px 0 -8px #1bf559, 16px -8px 0 -8px #1bf559, 16px 8px 0 -8px #1bf559, 0 18px 0 -8px #1bf559, -16px 8px 0 -8px #1bf559, -16px -8px 0 -8px #1bf559;
-  }
-  100% {
-    background: #1bf559;
-    box-shadow: 0 -32px 0 -10px transparent, 28px -16px 0 -10px transparent, 28px 16px 0 -10px transparent, 0 32px 0 -10px transparent, -28px 16px 0 -10px transparent, -28px -16px 0 -10px transparent;
-  }
-} */
-/* @-webkit-keyframes splash {
-  0% {
-    transform: scale(1.1);
-  }
-  40% {
-    transform: scale(1);
-    background: #1bf559;
-    box-shadow: 0 -18px 0 -8px #1bf559, 16px -8px 0 -8px #1bf559, 16px 8px 0 -8px #1bf559, 0 18px 0 -8px #1bf559, -16px 8px 0 -8px #1bf559, -16px -8px 0 -8px #1bf559;
-  }
-  100% {
-    background: #1bf559;
-    box-shadow: 0 -32px 0 -10px transparent, 28px -16px 0 -10px transparent, 28px 16px 0 -10px transparent, 0 32px 0 -10px transparent, -28px 16px 0 -10px transparent, -28px -16px 0 -10px transparent;
-  }
-} */
-/* @-o-keyframes splash {
-  0% {
-    transform: scale(1.1);
-  }
-  40% {
-    transform: scale(1);
-    background: #1bf559;
-    box-shadow: 0 -18px 0 -8px #1bf559, 16px -8px 0 -8px #1bf559, 16px 8px 0 -8px #1bf559, 0 18px 0 -8px #1bf559, -16px 8px 0 -8px #1bf559, -16px -8px 0 -8px #1bf559;
-  }
-  100% {
-    background: #1bf559;
-    box-shadow: 0 -32px 0 -10px transparent, 28px -16px 0 -10px transparent, 28px 16px 0 -10px transparent, 0 32px 0 -10px transparent, -28px 16px 0 -10px transparent, -28px -16px 0 -10px transparent;
-  }
-} */
+
 @keyframes splash {
-0% {
-  transform: scale(1.1);
-}
-40% {
-  transform: scale(1);
-  background:#16A249;
-  box-shadow: 0 -18px 0 -8px #16A249, 16px -8px 0 -8px #16A249, 16px 8px 0 -8px #16A249, 0 18px 0 -8px #16A249, -16px 8px 0 -8px #16A249, -16px -8px 0 -8px #16A249;
-}
-100% {
-  background: #16A249;
-  box-shadow: 0 -32px 0 -10px transparent, 28px -16px 0 -10px transparent, 28px 16px 0 -10px transparent, 0 32px 0 -10px transparent, -28px 16px 0 -10px transparent, -28px -16px 0 -10px transparent;
- }
+  0% {
+    transform: scale(1.1);
+  }
+  40% {
+    transform: scale(1);
+    background: #16a249;
+    box-shadow: 0 -18px 0 -8px #16a249, 16px -8px 0 -8px #16a249,
+      16px 8px 0 -8px #16a249, 0 18px 0 -8px #16a249, -16px 8px 0 -8px #16a249,
+      -16px -8px 0 -8px #16a249;
+  }
+  100% {
+    background: #16a249;
+    box-shadow: 0 -32px 0 -10px transparent, 28px -16px 0 -10px transparent,
+      28px 16px 0 -10px transparent, 0 32px 0 -10px transparent,
+      -28px 16px 0 -10px transparent, -28px -16px 0 -10px transparent;
+  }
 }
 
 /* ////////// Svg Animation End ///////////// */
 
-.pendingBox{
+.pendingBox {
   color: rgba(213, 4, 4, 0.6) !important;
   background-color: rgb(254, 242, 195);
   padding-inline: clamp(8px, 2vw, 20px);
   padding-block: clamp(1px, 2vw 1.3px);
 }
 
-.pendingBox p, .completeBox p{
+.pendingBox p,
+.completeBox p {
   font-size: clamp(11px, 3vw, 14px) !important;
 }
 
-.completeBox{
+.completeBox {
   color: rgb(22, 162, 73);
   background-color: rgb(217, 244, 227) !important;
   padding-inline: clamp(0px, 2vw, 20px);
@@ -275,49 +241,52 @@ input[type="checkbox"]:focus {
 
 /* ///////// Dark Mode /////////// */
 
-.dark-Mode{
+.dark-Mode {
   width: 50vw;
   max-width: 40px;
   height: 35px;
   cursor: pointer;
 }
-.insert-bg{
-  background-color: #0E121B;
+
+.insert-bg {
+  background-color: #0e121b;
 }
 
-.borderbgConTop{
+.borderbgConTop {
   border-color: #4d4d4d !important;
-  background-color: #27272A;
+  background-color: #27272a;
   color: white;
 }
 
-.modeBorder{
+.modeBorder {
   border-color: #4d4d4d !important;
 }
 
-.plusColor{
-  color :rgb(201, 201, 201) !important;
+.plusColor {
+  color: rgb(201, 201, 201) !important;
 }
 
 /* //////// task reatained ////////// */
 
-.task-retained-overlay{
+.task-retained-overlay {
   position: fixed;
-  top:0; left:0; right:0; bottom:0;
-  background: rgba(0,0,0,0.5);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 1000;
 }
 
-.task-retained-body{
+.task-retained-body {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1001;
   background: rgb(255, 255, 255);
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   animation: popupIn 0.3s ease forwards;
-  
 }
 
 @keyframes popupIn {
@@ -331,27 +300,26 @@ input[type="checkbox"]:focus {
   }
 }
 
-.task-pop-up{
+.task-pop-up {
   display: none;
 }
 
-.del-pop-up{
+.del-pop-up {
   display: none;
 }
 
-
-.task-incomplete-para{
+.task-incomplete-para {
   font-size: clamp(22px, 4vw, 30px);
 }
 
-.incomplete{
+.incomplete {
   color: rgba(194, 4, 4, 0.6) !important;
   border-color: rgba(194, 4, 4, 0.6) !important;
   background-color: rgb(254, 242, 195);
   font-size: clamp(14px, 3vw, 16px);
 }
 
-.goback{
+.goback {
   color: rgb(22, 162, 73) !important;
   border-color: rgb(22, 162, 73) !important;
   background-color: rgb(217, 244, 227) !important;
@@ -362,17 +330,21 @@ input[type="checkbox"]:focus {
 
 /* ///////// */
 
-.tick{
+.tick {
   width: clamp(15px, 3vw, 22px);
-  color: #16A249;
+  color: #16a249;
 }
 
-.menu-body{
+.shadow-bottom {
+  box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.25) !important;
+}
+
+.menu-body {
   position: relative;
   display: inline-block;
 }
 
-.menu-option{
+.menu-option {
   position: absolute;
   right: 3%;
   background: #fff;
@@ -380,7 +352,7 @@ input[type="checkbox"]:focus {
   border-radius: 6px;
   list-style: none;
   padding: 0px 0;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 0;
 }
 
@@ -393,14 +365,45 @@ input[type="checkbox"]:focus {
   background: #f0f0f0;
 }
 
-.bottomdata{
+.bottomdata {
   display: none !important;
 }
 
-.task-para-text{
+.task-para-text {
   font-size: clamp(13px, 3vw, 15px) !important;
+  white-space: normal;
+  word-break: break-word;
 }
 
-.del-edit-svg{
+.del-edit-svg {
   width: clamp(19px, 3vw, 22px);
+}
+
+.footer {
+  text-align: center;
+  font-size: clamp(14px, 3vw, 16px) !important;
+  color: #555;
+  width: 100%;
+  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.05);
+  font-family: "Poppins", sans-serif;
+}
+
+.heart {
+  color: red;
+  display: inline-block;
+  animation: pulse 1s ease-in-out infinite;
+}
+
+@keyframes pulse {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+}
+
+.sign-img {
+  width: clamp(170px, 14vw, 350px) !important;
 }
